# swtccl

./: 1  BUGS  CPPLINT.cfg  Makefile  Makefile.bak  README.md  tags  tccl.spec  tcclenv
depend/: core.h  debug.h  net.h  net_v4.h  net_v5.h  net_v6.h  p2p_plugin.h  param.h  socket.h  timer.h  utils.h  xccl.h
sdpti_hooklib/: CMakeLists.txt
sdpti_hooklib/hook_tccl/: CMakeLists.txt
src/: Makefile  Makefile.bk  enqueue.cc  init.cc  proc.cc  tccl.h
src/collectives/: all_gather.cc  all_reduce.cc  all_reduce_func.cc  all_to_all.cc  broadcast.cc  collectives.h  host_calculator.cc  reduce.cc  reduce_scatter.cc  sendrecv.cc
src/collectives/device/: Makefile  common_kernel.h
src/include/: alloc.h  argcheck.h  attributes.h  checks.h  comm.h  core.h  debug.h  enqueue.h  graph.h  ib.h  ibvcore.h  ibvsymbols.h  ibvwrap.h  log.h  nic.h  perf.h  proc.h  sharp.h  sharp_collcore.h  sharp_collsymbols.h  sharp_collwrap.h  shm.h  socket.h  utils.h  yangl.h
src/misc/: barrier.cc  debug.cc  ib.cc  ibvsymbols.cc  ibwrap.cc  nic.cc  post.cc  sharp.cc  sharp_collsymbols.cc  sharp_collwrap.cc  socket.cc  utils.cc  yangl.cc  yangl.cc.bak
src/transport/: shm.cc
